<resources>
    <string name="app_name">Vergoes</string>
    <string name="where_are_you_going">Where are you going ?</string>
    <string name="search_destination">search destination</string>
    <string name="cant_show_pickup_point">We can\'t show your pickup point on map because you have disabled location services. Please turn it on for better experience</string>
    <string name="turn_on_location_services">Turn on location services</string>
    <string name="very_bad">Very bad</string>
    <string name="need_some_improvement">Need some improvement</string>
    <string name="good">Good</string>
    <string name="rate_default">\" \"</string>
    <string name="great">Great</string>
    <string name="awesome">Awesome</string>
    <string name="travel_details">Travel Details</string>
    <string name="_continue">continue</string>
    <string name="sign_in">sign in</string>
    <string name="resend_receipt">Resend Receipt</string>
    <string name="need_help">Need help?</string>
    <string name="rate_app">Rate app</string>
    <string name="facebook">Facebook</string>
    <string name="tafo_market">Tafo market</string>
    <string name="kumasi_ghana">Kumasi, Ghana</string>
    <string name="_00_49_30">00:49:30</string>
    <string name="_2021_02_04">2021-02-04</string>
    <string name="finished">finished</string>
    <string name="tafo_ahenbronum">Tafo ahenbronum</string>
    <string name="atimatim_junction">Atimatim Junction</string>
    <string name="cash">Cash</string>
    <string name="gh_9_45">GH¢ 9.45</string>
    <string name="your_trip_with_kwame_gyasi">Your trip with Kwame Gyasi</string>
    <string name="_12_sep_2020">12 Sep 2020</string>
    <string name="my_driver_was_rude">My driver was rude</string>
    <string name="travel_history">Travel History</string>
    <string name="signup_as_driver">signup as driver</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="profile">Profile</string>
    <string name="enter_work_location">Enter work location</string>
    <string name="ebenezerasabre_gmail_com">ebenezerasabre@gmail.com</string>
    <string name="email">Email</string>
    <string name="about_us">About us</string>
    <string name="can_t_connect_to_internet_please_check_your_network_settings_and_try_again">Can\'t connect to internet. Please check your network settings and try again</string>
    <string name="enable_internet">Enable internet</string>
    <string name="sign_in_as_user">Sign in as user</string>
    <string name="sign_in_as_driver">Sign in as driver</string>
    <string name="vergoes">Vergoes</string>
    <string name="sing_up_as_user">sing up as user</string>
    <string name="maakro_station">Maakro Station</string>

</resources>