<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:layout_marginBottom="8dp"
    >
    <!--    android:background="@drawable/hback"-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_my_location_24"
        android:layout_margin="8dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true">
            <TextView
                android:id="@+id/bookDropOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/maakro_station"
                android:fontFamily="@font/alegreya"
                android:textSize="18sp"
                android:textColor="#000000" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/bookDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2021_02_04"
                    android:fontFamily="@font/alegreya"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/bookTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_49_30"
                    android:fontFamily="@font/alegreya"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp" />
                <TextView
                    android:id="@+id/bookPickUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kumasi_ghana"
                    android:fontFamily="@font/alegreya"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>
            <TextView
                android:id="@+id/bookUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="waiting"
                android:fontFamily="@font/alegreya"
                android:textAllCaps="true"
                android:textColor="@color/teal_700" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>

